# myBot

./: .gitignore  Cargo.toml  README.md  todo.md
src/: config.rs  main.rs  setup.rs  terminal.rs  ui.rs
src/agent/: mod.rs
src/app/: commands.rs  config_editor.rs  input.rs  mod.rs  session.rs
src/llm/: anthropic.rs  mod.rs  openai_compatible.rs
src/skills/: mod.rs
src/tools/: builtin.rs  custom.rs  mod.rs
