[package]
name = "mybot"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
unicode-width = "0.2"
regex = "1.11"
walkdir = "2.5"
glob = "0.3"
wait-timeout = "0.2"
dotenvy = "0.15"
